# spike

./: .gitignore  Cargo.toml  README.md  a.out  output  output.asm  output.s  print  program  program.jj  read
bencher/: Cargo.toml  main.rs
bencher/src/: main.rs
compiler/: Cargo.toml  build.rs
compiler/src/: interpreter.rs  lib.rs  main.rs  run.rs
compiler/src/debug/: display.rs  macros.rs  mod.rs  time.rs
compiler/src/elf/: header.rs  mod.rs
compiler/src/interpreter/: cvar.rs  lvar.rs  mod.rs  value.rs  x86var.rs
compiler/src/language/: alvar.rs  cvar.rs  lvar.rs  mod.rs  rlvar.rs  x86var.rs  x86var_format.rs
compiler/src/parser/: apply.rs  expression.rs  identifier.rs  if.rs  let.rs
compiler/src/passes/: assign_homes.rs  atomize.rs  coloring_interference.rs  compute_interference.rs  conclude.rs  explicate_control.rs  liveness_analysis.rs  mod.rs  patch_instructions.rs  reveal_functions.rs  type_check.rs  uniquify.rs
compiler/src/passes/assign/: assign.rs  color_interference.rs  compute_interference.rs  display.rs  include_liveness.rs  mod.rs  tests.rs
compiler/src/passes/atomize/: atomize.rs  display.rs  mod.rs  tests.rs
compiler/src/passes/conclude/: conclude.rs  mod.rs  tests.rs
compiler/src/passes/eliminate/: eliminate.rs  eliminate_expr.rs  eliminate_params.rs  eliminate_seq.rs  eliminate_tail.rs  interpret.rs  interpreter.rs  mod.rs  tests.rs
compiler/src/passes/eliminate_algebraic/: eliminate.rs  eliminate_params.rs  interpret.rs  mod.rs
compiler/src/passes/emit/: binary.rs  mod.rs  mul_div.rs  push_pop.rs  special.rs  unary.rs
compiler/src/passes/emit/elf/: header.rs  mod.rs  program.rs
compiler/src/passes/explicate/: display.rs  explicate.rs  explicate_assign.rs  explicate_def.rs  explicate_pred.rs  explicate_tail.rs  interpret.rs  interpreter.rs  mod.rs  tests.rs
compiler/src/passes/interference/: assign_homes.rs  coloring_interference.rs  compute_interference.rs  liveness_analysis.rs  mod.rs  tests.rs
compiler/src/passes/parse/: display.rs  grammar.lalrpop  grammar.rs  interpreter.rs  mod.rs  parse.rs  tests.rs  types.rs
compiler/src/passes/patch/: mod.rs  patch.rs  tests.rs
compiler/src/passes/patch_instructions/: mod.rs  patch_instructions.rs
compiler/src/passes/reveal/: display.rs  mod.rs  reveal.rs  tests.rs
compiler/src/passes/reveal_functions/: mod.rs  reveal_functions.rs
compiler/src/passes/select/: display.rs  interpreter.rs  io.rs  macros.rs  mod.rs  select.rs  std_lib.rs  tests.rs
compiler/src/passes/type_check/: check.rs  error.rs  mod.rs  uncover_globals.rs  util.rs  validate_expr.rs  validate_prim.rs  validate_struct.rs  validate_type.rs
compiler/src/passes/uniquify/: mod.rs  uniquify.rs
compiler/src/passes/validate/: check_sized.rs  error.rs  generate_constraints.rs  interpreter.rs  mod.rs  partial_type.rs  resolve.rs  resolve_types.rs  solve_constraints.rs  tests.rs  uncover_globals.rs  uniquify.rs  validate.rs
compiler/src/passes/validate/OLD/: check_sized.rs  uniquify.rs
compiler/src/passes/validate/OLD/type_check/: mod.rs  validate_apply.rs  validate_break.rs  validate_expr.rs  validate_lit.rs  validate_return.rs  validate_seq.rs  validate_struct.rs  validate_switch.rs  validate_type.rs  validate_typedef.rs  validate_var.rs  validate_variant.rs
compiler/src/passes/validate/constrain/: access_field.rs  apply.rs  asm.rs  assign.rs  binary_op.rs  break.rs  continue.rs  def.rs  expr.rs  if.rs  let.rs  lit.rs  loop.rs  mod.rs  return.rs  seq.rs  struct.rs  unary_op.rs  uncover_globals.rs  var.rs
compiler/src/passes/validate/type_check/: error.rs  mod.rs  uncover_globals.rs  validate_access_field.rs  validate_assign.rs  validate_continue.rs  validate_expr.rs  validate_if.rs  validate_let.rs  validate_lit.rs  validate_loop.rs  validate_prim.rs  validate_struct.rs  validate_type.rs  validate_typedef.rs  validate_var.rs
compiler/src/passes/validate/uniquify/: def.rs  expr.rs  fn.rs  mod.rs  type.rs  typedef.rs
compiler/src/utils/: expect.rs  gen_sym.rs  mod.rs  push_map.rs  split_test.rs  test_runtime.rs  time.rs  union_find.rs
compiler/std/: alloc.sp  exit.sp  math.sp  print.sp  read.sp
compiler/tests/: aoc.rs  integration.rs
parser_generator/: Cargo.toml
programs/: add.test  let_simple.test  multi_read.test  multiple_adds.test  print.test  read.test  sub.test
scripts/: verify_parser_up_to_date.sh
src/: alvar.rs  cvar.rs  lib.rs  (+9 more)
(+462 files in other folders)
