[package]
name = "rust_compiler_construction"
version = "0.1.0"
edition = "2021"
authors = ["joooooooonaaaaa", "juuuuuuuuuuuuuuuuuuliaaaaaaaaaa"]

[dependencies]
nom = "7.1.3"
thiserror = "1.0.46"
once_cell = "1.18.0"
regex = "1.9.3"
tempdir = "0.3.7"
bitflags =  "2.4.0"
petgraph = "0.6.4"
clap = { version = "4.3.21", features = ["derive"] }
miette = { version = "5.10.0", features = ["fancy"] }
zerocopy = {version = "0.7.8", features = ["derive"] }
heapless = "0.7.16"

[dev-dependencies]
test_each_file = "0.1.0"
