[package]
name = "rust_compiler_construction"
version = "0.1.0"
edition = "2021"
authors = ["joooooooonaaaaa", "juuuuuuuuuuuuuuuuuuliaaaaaaaaaa"]
default-run = "rust_compiler_construction"

[dependencies]
nom = "7.1.3"
thiserror = "1.0.46"
once_cell = "1.18.0"
regex = "1.9.3"
tempdir = "0.3.7"
bitflags = "2.4.0"
petgraph = "0.6.4"
clap = { version = "4.3.21", features = ["derive"] }
miette = { version = "5.10.0", features = ["fancy"] }
zerocopy = {version = "0.7.8", features = ["derive"] }
itertools = "0.11.0"
walkdir = { version = "2.4.0", optional = true}
mongodb = { version = "2.7.0", optional = true}
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
test_each_file = "0.1.0"

[features]
bench = ["walkdir", "mongodb", "tokio"]

[[bin]]
name = "bencher"
path = "bencher/main.rs"
required-features = ["bench"]
