[package]
name = "bencher"
version = "0.1.0"
edition = "2021"
authors = ["joooooooonaaaaa", "juuuuuuuuuuuuuuuuuuliaaaaaaaaaa"]

[dependencies]
itertools = "0.11.0"
pathdiff = "0.2.1"
tempdir = "0.3.7"
walkdir = "2.4.0"
clap = "4.4.6"
git2 = "0.18.1"
compiler = { path = "../compiler" }
serde = { version = "1.0.189", features = ["derive"] }
mongodb = { version = "2.7.0", default-features = false, features = ["sync"]}
