[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
authors = ["joooooooonaaaaa", "juuuuuuuuuuuuuuuuuuliaaaaaaaaaa"]

[dependencies]
thiserror = "1.0.50"
bitflags = "2.4.1"
petgraph = "0.6.4"
itertools = "0.11.0"
serde = { version = "1.0.189", features = ["derive"] }
clap = { version = "4.4.6", features = ["derive"] }
miette = { version = "5.10.0", features = ["fancy"] }
zerocopy = { version = "0.7.11", features = ["derive"] }
lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }
derive_more = "0.99.17"
functor_derive = "0.2.2"

[dev-dependencies]
test_each_file = "0.1.0"
tempdir = "0.3.7"
